# ChatBot-Demo-QML

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt
Firmware_STM32/motor_control/: .mxproject  CLAUDE.md  CMakeLists.txt  RULES.md  TASKS.md  motor_control.ioc  prompt.txt
Firmware_STM32/motor_control/Core/Inc/: main.h
Firmware_STM32/motor_control/Core/Src/: main.c  stm32f1xx_hal_msp.c  stm32f1xx_it.c
Firmware_STM32/motor_control/USB_DEVICE/App/: usbd_cdc_if.c  usbd_cdc_if.h
Firmware_STM32/motor_control/cmake/stm32cubemx/: CMakeLists.txt
Software_Qt/: .qmlls.ini  ARCHITECTURE.md  CLAUDE.md  CMakeLists.txt  JOURNAL.md
Software_Qt/qml/: Chatbot.qml  Main.qml  Map.qml  Theme_Color.qml  Weather.qml
Software_Qt/qml/Cluster/: Cluster.qml  PWM_Control.qml
Software_Qt/src/: ChatController.cpp  NoteFilterModel.cpp
qml/: Chatbot.qml  Contact.qml  Home.qml  Main.qml  Music.qml  Note.qml  Theme_Color.qml
qml/Cluster/: Cluster.qml  Watch.qml
qml/Velocity/: Velocity.qml
